# ai_team_sailing_instructor

./: README.md  pyproject.toml  pyproject.toml.orig
financial_analyst_crew/: crew.py  main.py
financial_analyst_crew/config/: agents.yaml  tasks.yaml
