[tool.poetry]
name = "financial_analyst_crew"
version = "0.1.0"
description = "optimize-response-crew using crewAI"
authors = ["Ryan <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
crewai = {extras = ["tools"], version = "^0.22.2"}
langchain-groq = "^0.1.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[tool.poetry.scripts]
financial_analyst_crew = "financial_analyst_crew.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"